-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.1
-
None
-
macOS, QtQuick Fusion style
-
cbf9d8076981d07ae9c9ee9323288b2c30a8b1e8
The BusyIndicator is not rendered at all when the "running" property is bound to some value.
If "running" is set to true initially, rendering works.
Note: Only "Fusion" style is affected! Works as expected with Default, Universal and Material.
import QtQuick 2.10 import QtQuick.Window 2.10 import QtQuick.Controls 2.2 Window { visible: true width: 640 height: 480 title: qsTr("Please use FUSION style") MouseArea { id: mouse anchors.fill: parent } BusyIndicator { anchors.centerIn: parent running: mouse.pressed } }
| For Gerrit Dashboard: QTBUG-66752 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 221729,2 | Fusion: fix BusyIndicator | 5.11 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |