Fusion: fix BusyIndicator

When running is set to true, QQuickFusionBusyIndicator, which is a
QQuickPaintedItem sub-class, must trigger an update.

Task-number: QTBUG-66752
Change-Id: I848a0008d7c8bd3f26f5daf54881c80cc6ba557e
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>